CHANGELOG for the CCEAP tool

current(0.5.3) : latest commit on 2017-10-20
 * fixed an error message in the client
 * increased number of packets that can be send from 255 to 2048
 * automatically adjust number of packets to be send based on number
   of IAT values if parameter -t is used (can still be overwritten by
   adding -c after -t in the command line)

v. 0.5.2 : 2017-03-30
 * added code to compile CCEAP under MacOS (not officially supported,
   just experimental)
 * performed additional small improvements within the documentation
 * fix header dependency in Makefile for C object files

v. 0.5.1 : 2017-02-03
 * performed additional improvements within documentation and Makefile
 * added three pages of sample exercises including solutions
 * added quite parameter -q for the server

v. 0.5.0 : 2016-10-18
 * added support for the Inter-arrival Time Pattern (and with that also an
   (indirect) support for the Rate/Throughput Pattern)
 * aligned port used in Makefile with port used in docs
 * improved formating issues for PDF documentation and introduced
   several detail updates within the documentation

v. 0.4.1 : 2016-07-26
 * Initial public release
