@@ -6,7 +6,7 @@
 # * for students. The tool demonstrates several network covert channel
 # * vulnerabilities in a single communication protocol.
 # *
-# * Copyright (C) 2016 Steffen Wendzel, steffen (at) wendzel (dot) de
+# * Copyright (C) 2016-2017 Steffen Wendzel, steffen (at) wendzel (dot) de
 # *                    http://www.wendzel.de
 # *
 # * This program is free software: you can redistribute it and/or modify
@@ -31,7 +31,7 @@ CC=gcc
 HEADERS=main.h
 #DEBUGFLAGS=-g -ggdb
 CFLAGS=-Wall -W -Wextra -Wshadow -c $(DEBUGFLAGS)
-OBJECTS=client.o support.o server.o
+OBJECTS=client.o support.o server.o iat_encode.o
 BUILDFLAGS=-O
 SERVERBUILDFLAGS=-lm
 .SUFFIXES : .c .o
@@ -42,9 +42,10 @@ SERVERBUILDFLAGS=-lm
 all : $(OBJECTS)
 	$(CC) $(BUILDFLAGS) -o client client.o support.o
 	$(CC) $(BUILDFLAGS) $(SERVERBUILDFLAGS) -o server server.o support.o
+	$(CC) $(BUILDFLAGS) -o iat_encode iat_encode.o
 
 clean : 
-	rm -vf client server a.out *~ *.core core $(OBJECTS)
+	rm -vf client server iat_encode a.out *~ *.core core $(OBJECTS)
 
 runcli :
 	./client -P $(DEFAULTPORT) -D 127.0.0.1 -d Asciii -i 123 -o 1,2,3/4,5,6/7,8,9/ -v
